--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   </head>
 
   <body class="container-fluid">
-    <%= render 'layouts/navigation' %>
+    <%= render 'layouts/nav' %>
     <main class="">
       <%= yield %>
     </main>
