Completed password reset

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @title) %>
 
 <p>Portfolio</p>
-<p>Carlie La Vallee</p>
-<p>3D Lighting Artist</p>
+<p><%= carlie.name %></p>
+<p><%= carlie.title %></p>
