--- a/app/views/layouts/_public_navigation.html.erb
+++ b/app/views/layouts/_public_navigation.html.erb
@@ -10,16 +10,16 @@
  	<div class="collapse navbar-collapse" id="navContent">
  		<ul class="navbar-nav ml-auto">
  			<li class="nav-item">
- 				<%= link_to "About", "#", class: "nav-link" %>
+ 				<%= link_to "About", about_path, class: "nav-link" %>
  			</li>
  			<li class="nav-item">
- 				<%= link_to "Resume", "#", class: "nav-link" %>
+ 				<%= link_to "Resume", resume_path, class: "nav-link" %>
  			</li>
  			<li class="nav-item">
- 				<%= link_to "Work", "#", class: "nav-link" %>
+ 				<%= link_to "Work", work_path, class: "nav-link" %>
  			</li>
  			<li class="nav-item">
- 				<%= link_to "Contact", "#", class: "nav-link" %>
+ 				<%= link_to "Contact", contact_path, class: "nav-link" %>
  			</li>
  		</ul>
  	</div>
