--- a/app/views/layouts/_private_navigation.html.erb
+++ b/app/views/layouts/_private_navigation.html.erb
@@ -10,13 +10,18 @@
  	<div class="collapse navbar-collapse" id="navContent">
  		<ul class="navbar-nav ml-auto">
  			<li class="nav-item">
- 				<%= link_to "Settings", edit_user_path(current_user), class: "nav-link" %>
+ 				<%= link_to "About", about_path, class: "nav-link" %>
  			</li>
  			<li class="nav-item">
- 				<%= link_to "Work", "#", class: "nav-link" %>
+ 				<%= link_to "Work", work_path, class: "nav-link" %>
  			</li>
  			<li class="nav-item">
- 				<%= link_to "Resume", "#", class: "nav-link" %>
+ 				<%= link_to "Resume", resume_path, class: "nav-link" %>
+ 			</li>
+ 			<li class="nav-item">
+ 				<%= link_to edit_user_path(current_user), class: "nav-link" do %>
+ 					<%= icon('fas', 'tools') %>
+ 				<% end %>
  			</li>
  		</ul>
  	</div>
