--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -1,8 +1,20 @@
 <% provide(:title, @title) %>
 
 <div class="row">
-	<div class="col-4 offset-4">
+	<div class="col-6 offset-3">
 		<p>My<br>Resume</p>
-		<p></p>
+		<h1>Experience</h1>
+		<h1>Education</h1>
+		<% if Education.any? %>
+			<% @educations.each do |e| %>
+				<%= render 'partials/education', e: e %>
+			<% end %>
+		<% end %>
 	</div>
+	<% if logged_in? %>
+		<div class="col-6 offset-3">
+			<h1>Add New Education</h1>
+			<%= render 'forms/education' %>
+		</div>
+	<% end %>
 </div>
