--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,23 +3,6 @@
 <div class="row">
 	<div class="col-4 offset-4">
 		<p>Settings</p>
-		<%= form_for(@user) do |f| %>
-<!-- 			<%= f.label :name %>
-			<%= f.text_field :name, class: "form-control form-control-sm" %>
-
-			<%= f.label :title %>
-			<%= f.text_field :title, class: "form-control form-control-sm" %> -->
-
-			<%= f.label :email %>
-			<%= f.text_field :email, class: "form-control form-control-sm" %>
-
-			<%= f.label :password %>
-			<%= f.password_field :password, class: "form-control form-control-sm" %>
-
-			<%= f.label :password_confirmation %>
-			<%= f.password_field :password_confirmation, class: "form-control form-control-sm" %>
-
-			<%= f.submit "Save changes", class: "btn btn-primary" %>
-		<% end %>
+		<%= render 'forms/user' %>
 	</div>
 </div>
