--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -3,7 +3,23 @@
 <div class="row">
 	<div class="col-6 offset-3">
 		<p>My<br>Resume</p>
+<!-- Experience -->
 		<h1>Experience</h1>
+		<% if Experience.any? %>
+			<% @experiences.each do |e| %>
+				<%= render 'partials/experience', e: e %>
+			<% end %>
+		<% end %>
+	</div>
+<!-- Experience Form -->
+	<% if logged_in? %>
+		<div class="col-6 offset-3">
+			<h1>Add New Experience</h1>
+			<%= render 'forms/experience' %>
+		</div>
+	<% end %>
+<!-- Education -->	
+	<div class="col-6 offset-3">
 		<h1>Education</h1>
 		<% if Education.any? %>
 			<% @educations.each do |e| %>
@@ -11,6 +27,7 @@
 			<% end %>
 		<% end %>
 	</div>
+<!-- Education Form -->	
 	<% if logged_in? %>
 		<div class="col-6 offset-3">
 			<h1>Add New Education</h1>
