--- a/app/views/application/work.html.erb
+++ b/app/views/application/work.html.erb
@@ -1,12 +1,16 @@
 <% provide(:title, @title) %>
 
 <div class="row">
-	<div class="col-4 offset-4">
+	<div class="col-6 offset-3">
 		<p>My<br>Work</p>
-		<% if logged_in? %>
-			<%= link_to "", class: "float-right" do %>
-				<%= icon('fas', 'edit') %>
+		<% if Example.any? %>
+			<% @examples.each do |e| %>
+				<%= render 'partials/example', e: e %>
 			<% end %>
+		<% end %>
+		<% if logged_in? %>
+			<h1>Add New Example</h1>
+			<%= render 'forms/example' %>
 		<% end %>
 		<p></p>
 	</div>
