--- a/app/views/forms/_attributes.html.erb
+++ b/app/views/forms/_attributes.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@user) do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name, class: "form-control form-control-sm" %>
+	<%= f.label @attribute.to_sym %>
+	<%= f.text_field @attribute.to_sym, class: "form-control form-control-sm" %>
 
 	<%= f.submit, class: "btn btn-primary" do %>
 		<%= icon('fas', 'check') %>
