--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   </head>
 
   <body class="container-fluid">
+    <% flash.each do |message_type, message| %>
+      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+    <% end %>
     <%= render 'layouts/nav' %>
+    <%= render 'layouts/modal_container' %>
     <main class="">
       <%= yield %>
     </main>
