Implemented html markdown and completed all edit/delete interfaces

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -8,6 +8,6 @@
 				<%= icon('fas', 'edit') %>
 			<% end %>
 		<% end %>
-		<p><%= carlie.bio %></p>
+		<p><%= markdown(carlie.bio) %></p>
 	</div>
 </div>
