--- a/app/views/layouts/_modal_container.html.erb
+++ b/app/views/layouts/_modal_container.html.erb
@@ -1,5 +1,5 @@
 <div id="modal_container" class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
     <div class="modal-content">
     <!-- Modal Content -->
     </div>
