--- a/app/views/forms/_example.html.erb
+++ b/app/views/forms/_example.html.erb
@@ -1,17 +1,17 @@
 <%= form_for(@example, html: { multipart: true }) do |f| %>
-		<div class="form-group">
-			<%= f.label :category %>
-			<%= f.select :category, options_for_category, prompt: "-select one-", class: "form-control form-control-sm" %>
-		</div>
+		<div class="form-group row">
+			<div class="col-auto">
+				<%= f.label :category %>
+				<%= f.select :category, options_for_category, prompt: "-select one-", class: "form-control form-control-sm" %>
+			</div>
 
-		<div class="form-group">
-			<%= f.label :title %>
-			<%= f.text_field :title, class: "form-control form-control-sm" %>
-		</div>
+			<div class="col">
+				<%= f.text_field :title, placeholder: "Title", class: "form-control form-control-sm" %>
+			</div>
 
-		<div class="form-group">
-			<%= f.label :content %>
-			<%= f.file_field :content %>
+			<div class="col">
+				<%= f.file_field :content %>
+			</div>
 		</div>
 
 	<%= f.submit "Submit", class: "btn btn-primary" %>
