--- a/app/views/forms/_experience.html.erb
+++ b/app/views/forms/_experience.html.erb
@@ -1,30 +1,25 @@
 <%= form_for(@experience) do |f| %>
 	<div class="form-group row">
 		<div class="col">
-			<%= f.label :company %>
-			<%= f.text_field :company, class: "form-control form-control-sm" %>
+			<%= f.text_field :company, placeholder: "Company", class: "form-control form-control-sm" %>
 		</div>
 
 		<div class="col">
-			<%= f.label :location %>
-			<%= f.text_field :location, class: "form-control form-control-sm" %>
+			<%= f.text_field :location, placeholder: "Location", class: "form-control form-control-sm" %>
 		</div>
 
 		<div class="col">
-			<%= f.label :title %>
-			<%= f.text_field :title, class: "form-control form-control-sm" %>
+			<%= f.text_field :title, placeholder: "Title", class: "form-control form-control-sm" %>
 		</div>
 
 		<div class="col">
-			<%= f.label :year %>
-			<%= f.text_field :year, class: "form-control form-control-sm" %>
+			<%= f.text_field :year, placeholder: "Year(s)", class: "form-control form-control-sm" %>
 		</div>
 	</div>
 
 	<div class="form-group row">
 		<div class="col">
-			<%= f.label :desc %>
-			<%= f.text_area :desc, class: "form-control form-control-sm", rows: "5" %>
+			<%= f.text_area :desc, placeholder: "Responsibilities and Duties", class: "form-control form-control-sm", rows: "5" %>
 		</div>
 	</div>
 
