--- a/app/views/layouts/_private_navigation.html.erb
+++ b/app/views/layouts/_private_navigation.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-	<%= link_to "Home", root_path, class: "navbar-brand" %>
+	<%= link_to "Carlie La Vallee", root_path, class: "navbar-brand" %>
 
 	<!--Navigation Button-->
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
