--- a/app/views/partials/_experience.html.erb
+++ b/app/views/partials/_experience.html.erb
@@ -1,3 +1,8 @@
-<p><span class="font-weight-bold"><%= e.company %></span>, <%= e.location %> — <%= e.title %><br>
-	<span class="font-italic"><%= e.year %></span><br></p>
-<p><%= e.desc %></p>
+<% if logged_in? %>
+	<%= render 'partials/experience_menu', e: e %>
+<% end %>
+<div>
+	<p><span class="font-weight-bold"><%= e.company %></span>, <%= e.location %> — <%= e.title %><br>
+		<span class="font-italic"><%= e.year %></span><br></p>
+	<p><%= markdown(e.desc) %></p>
+</div>
