--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, @title) %>
 
-<div class="row">
-	<div class="col-4 offset-4">
-		<p>Let's<br>Connect</p>
+<div class="col-10 offset-1">
+	<p class="contact-heading">Let's</p>
+	<p class="contact-heading offset-1">Connect</p>
+	<div class="col-lg-6 offset-lg-5 form-contact">
 		<%= render 'forms/contact' %>
 	</div>
 </div>
