--- a/app/views/partials/_experience_menu.html.erb
+++ b/app/views/partials/_experience_menu.html.erb
@@ -1,4 +1,4 @@
-<a class="float-right" data-toggle="dropdown" id="postMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<a class="resume-menu" data-toggle="dropdown" id="postMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	<%= icon('fas', 'angle-down') %>
 </a>
 <div class="dropdown-menu" aria-labelledby="postMenuButton">
