--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, "Edit Profile") %>
 
-<div class="row">
-	<div class="col-4 offset-4">
-		<p>Settings</p>
+<div class="col-10 offset-1">
+	<p class="users-heading">Settings</p>
+	<div class="col-lg-6 offset-lg-5">
 		<%= render 'forms/user' %>
 	</div>
 </div>
