--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,20 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+p {
+	&.users-heading {
+		font-family: "MADE Canvas";
+		font-size: calc(36px + (200 - 36) * ((100vw - 320px) / (1920 - 320)));
+		font-weight: bold;
+		text-transform: lowercase;
+	}
+}
+
+.btn-users {
+	background-color: transparent;
+	border: none;
+	font-family: "MADE Canvas";
+	font-size: 30px;
+	float: right;
+	color: #fff;
+	&:hover {
+		color: #fa0023;		
+	}
+}
