--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -1,37 +1,34 @@
 <% provide(:title, @title) %>
 
-<div class="row">
-	<div class="col-6 offset-3">
-		<p>My<br>Resume</p>
+<div class="col-10 offset-1 resume-body">
+	<p class="resume-heading">My</p>
+	<p class="resume-heading offset-1">Resume</p>
 <!-- Experience -->
-		<h1>Experience</h1>
+	<div class="col-xl-7 offset-xl-5 col-lg-8 offset-lg-4 col-md-9 offset-md-3 clearfix">
+		<h3 class="resume-experience">Experience</h3>
 		<% if Experience.any? %>
 			<% @experiences.each do |e| %>
 				<%= render 'partials/experience', e: e %>
 			<% end %>
 		<% end %>
-	</div>
 <!-- Experience Form -->
-	<% if logged_in? %>
-		<div class="col-6 offset-3">
-			<h1>Add New Experience</h1>
+		<% if logged_in? %>
+			<h3 class="resume-experience">Add New Experience</h3>
 			<%= render 'forms/experience' %>
-		</div>
-	<% end %>
+		<% end %>
+	</div>
 <!-- Education -->	
-	<div class="col-6 offset-3">
-		<h1>Education</h1>
+	<div class="col-xl-7 offset-xl-5 col-lg-8 offset-lg-4 col-md-9 offset-md-3 clearfix">
+		<h3 class="resume-education">Education</h3>
 		<% if Education.any? %>
 			<% @educations.each do |e| %>
 				<%= render 'partials/education', e: e %>
 			<% end %>
 		<% end %>
-	</div>
 <!-- Education Form -->	
-	<% if logged_in? %>
-		<div class="col-6 offset-3">
-			<h1>Add New Education</h1>
+		<% if logged_in? %>
+			<h3 class="resume-education">Add New Education</h3>
 			<%= render 'forms/education' %>
-		</div>
-	<% end %>
+		<% end %>
+	</div>
 </div>
