--- a/app/views/forms/_example.html.erb
+++ b/app/views/forms/_example.html.erb
@@ -1,26 +1,31 @@
 <%= form_for(@example, html: { multipart: true }) do |f| %>
-		<div class="form-group row">
-			<div class="col-auto">
-				<%= f.label :category %>
-				<%= f.select :category, options_for_category, prompt: "-select one-", class: "form-control form-control-sm" %>
+		<div class="form-row">
+			<div class="form-group input-group mb-3 works-input">
+				<%= f.select :category, options_for_category, prompt: "-select one-", class: "custom-select form-control-sm" %>
+				<div class="input-group-append">
+					<%= f.label :category, class: "input-group-text" %>
+				</div>
 			</div>
 
-			<div class="col">
+			<div class="form-group col-12 works-input">
 				<%= f.text_field :title, placeholder: "Title", class: "form-control form-control-sm" %>
-			</div>
-
-			<div class="col">
-				<%= f.file_field :content %>
 			</div>
 		</div>
 
-	<%= f.submit "Submit", class: "btn btn-primary" %>
+		<div class="form-group form-row">
+			<div class="custom-file col-12 works-input">
+				<%= f.file_field :content, class: "custom-file-input" %>
+				<%= f.label :content, "Choose File", class: "form-control-sm custom-file-label" %>
+			</div>
+		</div>
+
+	<%= f.submit "submit", class: "btn-works" %>
 <% end %>
 
 <script type="text/javascript">
 	$('#post_picture').bind('change', function() {
 		var size_in_megabytes = this.files[0].size / 1024 / 1024;
-		if (size_in_megabytes > 5) {
+		if (size_in_megabytes > 10) {
 			alert('Maximum file size is 5MB');
 		}
 	});
