--- a/app/views/forms/_experience.html.erb
+++ b/app/views/forms/_experience.html.erb
@@ -1,27 +1,32 @@
 <%= form_for(@experience) do |f| %>
-	<div class="form-group row">
-		<div class="col">
-			<%= f.text_field :company, placeholder: "Company", class: "form-control form-control-sm" %>
+	<div class="form-row">
+		<div class="form-group col-lg-3 col-sm-6 col-12">
+			<%= f.label :company %>
+			<%= f.text_field :company, class: "form-control form-control-sm" %>
 		</div>
 
-		<div class="col">
-			<%= f.text_field :location, placeholder: "Location", class: "form-control form-control-sm" %>
+		<div class="form-group col-lg-3 col-sm-6 col-12">
+			<%= f.label :location %>
+			<%= f.text_field :location, class: "form-control form-control-sm" %>
 		</div>
 
-		<div class="col">
-			<%= f.text_field :title, placeholder: "Title", class: "form-control form-control-sm" %>
+		<div class="form-group col-lg-3 col-sm-6 col-12">
+			<%= f.label :title %>
+			<%= f.text_field :title, class: "form-control form-control-sm" %>
 		</div>
 
-		<div class="col">
-			<%= f.text_field :year, placeholder: "Year(s)", class: "form-control form-control-sm" %>
-		</div>
-	</div>
-
-	<div class="form-group row">
-		<div class="col">
-			<%= f.text_area :desc, placeholder: "Responsibilities and Duties", class: "form-control form-control-sm", rows: "5" %>
+		<div class="form-group col-lg-3 col-sm-6 col-12">
+			<%= f.label "Year(s)" %>
+			<%= f.text_field :year, class: "form-control form-control-sm" %>
 		</div>
 	</div>
 
-	<%= f.submit "Submit", class: "btn btn-primary" %>
+	<div class="form-group form-row">
+		<div class="col">
+			<%= f.label "Responsibilities" %>
+			<%= f.text_area :desc, class: "form-control form-control-sm", rows: "5" %>
+		</div>
+	</div>
+
+	<%= f.submit "submit", class: "btn-experience" %>
 <% end %>
