--- a/app/views/forms/_user.html.erb
+++ b/app/views/forms/_user.html.erb
@@ -2,13 +2,17 @@
 	<div class="form-group">
 		<%= f.label :email %>
 		<%= f.text_field :email, class: "form-control form-control-sm" %>
+	</div>
 
+	<div class="form-group">
 		<%= f.label :password %>
 		<%= f.password_field :password, class: "form-control form-control-sm" %>
+	</div>
 
+	<div class="form-group">
 		<%= f.label "Confirm password" %>
 		<%= f.password_field :password_confirmation, class: "form-control form-control-sm" %>
 	</div>
 
-	<%= f.submit "Save changes", class: "btn btn-primary" %>
+	<%= f.submit "save changes", class: "btn-users" %>
 <% end %>
