--- a/app/views/layouts/_private_navigation.html.erb
+++ b/app/views/layouts/_private_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md col-10 offset-1">
 	<%= link_to "Carlie La Vallee", root_path, class: "navbar-brand" %>
 
 	<!--Navigation Button-->
@@ -8,19 +8,19 @@
 
 	<!--Navigation Links-->
  	<div class="collapse navbar-collapse" id="navContent">
- 		<ul class="navbar-nav ml-auto">
- 			<li class="nav-item">
+ 		<ul class="navbar-nav">
+ 			<li class="col-md-2 offset-md-4 nav-item">
  				<%= link_to "About", about_path, class: "nav-link" %>
  			</li>
- 			<li class="nav-item">
+ 			<li class="col-md-2 nav-item">
  				<%= link_to "Resume", resume_path, class: "nav-link" %>
  			</li>
- 			<li class="nav-item">
+ 			<li class="col-md-2 nav-item">
  				<%= link_to "Work", work_path, class: "nav-link" %>
  			</li>
- 			<li class="nav-item">
+ 			<li class="col-md-2 nav-item">
  				<%= link_to edit_user_path(current_user), class: "nav-link" do %>
- 					<%= icon('fas', 'tools') %>
+ 					<%= icon('fas', 'cog') %>
  				<% end %>
  			</li>
  		</ul>
