--- a/app/views/partials/_education.html.erb
+++ b/app/views/partials/_education.html.erb
@@ -1,8 +1,8 @@
 <% if logged_in? %>
 	<%= render 'partials/education_menu', e: e %>
 <% end %>
-<div>	
-	<p><span class="font-weight-bold"><%= e.school %></span> — <%= e.degree %><br>
-		<span class="font-italic"><%= e.year %></span><br>
-		<%= e.major %></p>
+<div class="resume-education-content">	
+	<h2 class="resume-school"><%= e.school %></h2> — <%= e.degree %><br>
+	<%= e.year %><br>
+	<h2 class="resume-major"><%= e.major %></h2>
 </div>
