--- a/app/views/partials/_experience.html.erb
+++ b/app/views/partials/_experience.html.erb
@@ -2,7 +2,7 @@
 	<%= render 'partials/experience_menu', e: e %>
 <% end %>
 <div>
-	<p><span class="font-weight-bold"><%= e.company %></span>, <%= e.location %> — <%= e.title %><br>
-		<span class="font-italic"><%= e.year %></span><br></p>
-	<p><%= markdown(e.desc) %></p>
+	<h2 class="resume-company"><%= e.company %></h2>, <%= e.location %> — <h1 class="resume-title"><%= e.title %></h1><br>
+		<%= e.year %></p>
+	<p><%= markdown(e.desc) %>
 </div>
