--- a/app/views/application/work.html.erb
+++ b/app/views/application/work.html.erb
@@ -3,17 +3,18 @@
 <div class="col-10 offset-1">
 	<p class="works-heading">My</p>
 	<p class="works-heading offset-1">Work</p>
-	<div class="col-md-10 offset-md-1 works-content">
-		<% if Example.any? %>
-			<% @examples.each do |e| %>
-				<%= render 'partials/example', e: e %>
-			<% end %>
-		<% end %>
-	</div>
 	<div class="col-xl-6 offset-xl-5 col-lg-7 offset-lg-4 col-md-8 offset-md-3">
 		<% if logged_in? %>
 			<h3 class="works-example">Add New Example</h3>
 			<%= render 'forms/example' %>
+		<% end %>
+	</div>
+	<div class="col-md-10 offset-md-1 grid">
+		<div class="grid-sizer"></div>
+		<% if Example.any? %>
+			<% @examples.each do |e| %>
+				<%= render 'partials/example', e: e %>
+			<% end %>
 		<% end %>
 	</div>
 </div>
