--- a/app/views/partials/_example.html.erb
+++ b/app/views/partials/_example.html.erb
@@ -1,5 +1,5 @@
 <% if e.category.to_s == "image" %>
-	<div>
+	<div class="">
 		<% if logged_in? %>
 			<%= render 'partials/example_menu', e: e %>
 		<% end %>
