--- a/app/views/forms/_example.html.erb
+++ b/app/views/forms/_example.html.erb
@@ -8,7 +8,7 @@
 			</div>
 
 			<div class="form-group col-12 works-input">
-				<%= f.text_field :title, placeholder: "Title", class: "form-control form-control-sm" %>
+				<%= f.text_field :style, placeholder: "Style", class: "form-control form-control-sm" %>
 			</div>
 		</div>
 
@@ -21,12 +21,3 @@
 
 	<%= f.submit "submit", class: "btn-works" %>
 <% end %>
-
-<script type="text/javascript">
-	$('#post_picture').bind('change', function() {
-		var size_in_megabytes = this.files[0].size / 1024 / 1024;
-		if (size_in_megabytes > 10) {
-			alert('Maximum file size is 5MB');
-		}
-	});
-</script>
