--- a/app/views/layouts/_public_navigation.html.erb
+++ b/app/views/layouts/_public_navigation.html.erb
@@ -16,7 +16,7 @@
  				<%= link_to "Resume", resume_path, class: "nav-link" %>
  			</li>
  			<li class="col-md-2 nav-item">
- 				<%= link_to "Work", work_path, class: "nav-link" %>
+ 				<%= link_to "Work", works_path, class: "nav-link" %>
  			</li>
  			<li class="col-md-2 nav-item">
  				<%= link_to "Contact", contact_path, class: "nav-link" %>
