--- a/app/views/partials/_example_menu.html.erb
+++ b/app/views/partials/_example_menu.html.erb
@@ -1,5 +1,5 @@
-<a class="works-menu" data-toggle="dropdown" id="postMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	<%= icon('fas', 'angle-down') %>
+<a class="grid-item-menu" data-toggle="dropdown" id="postMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	<i class="fas fa-angle-down"></i>
 </a>
 <div class="dropdown-menu" aria-labelledby="postMenuButton">
 	<!-- Edit modal path -->
