--- a/app/assets/stylesheets/works.scss
+++ b/app/assets/stylesheets/works.scss
@@ -20,33 +20,63 @@ h3.works-example {
 
 .grid {
 	width: 100%;
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: auto;
 	margin-top: 25px;
 	margin-bottom: 100px;
-}
 
-.grid-item, .grid-item-wide, .grid-item-short {
-	display: inline-block;
-	float: left;
-	img, video {
-		width: 100%;
-	}
 }
 
 .grid-item {
-	width: 33.33%;
+	position: relative;
+	img, video {
+		width: 100%;
+	}
+	&:first-of-type {
+		grid-column: 1 / 3;
+		grid-row: 1 / 3;
+	}
+	&:nth-of-type(5) {
+		grid-column: 2 / 4;
+		grid-row: 3 / 5;
+	}
+	&:nth-of-type(9) {
+		grid-column: 1 / 3;
+		grid-row: 5 / 7;
+	}
+	&:nth-of-type(13) {
+		grid-column: 2 / 4;
+		grid-row: 8 / 10;
+	}
+	&:nth-of-type(21) {
+		grid-column: 1 / 3;
+		grid-row: 11 / 13;
+	}
+	&:nth-of-type(24) {
+		grid-column: 2 / 4;
+		grid-row: 13 / 15;
+	}
+	&:nth-of-type(25) {
+		grid-column: 1 / 3;
+		grid-row: 15 / 17;
+	}
 }
 
-.grid-item-wide {
-	width: 66.66%;
-}
-
-.grid-item-short {
-	height: 50%;
+.grid-item-special {
+	img, video {
+		height: 100%;
+		max-height: 256px;
+	}
 }
 
 a {
-	&.works-menu {
-		float: right;
+	&.grid-item-menu {
+		position: absolute;
+		top: 5px;
+		right: 10px;
+		z-index: 100;
 		i:hover {
 			cursor: pointer;
 			color: #fa0023;	
