--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="fixed-bottom">
 	<% if logged_in? %>
 		<%= link_to logout_path, method: "delete" do %>
-			<%= icon('fas', 'lock') %>
+			<i class="fas fa-lock"></i>
 		<% end %>
 	<% else %>
 		<%= link_to login_path do %>
-			<%= icon('fas', 'unlock') %>
+			<i class="fas fa-unlock"></i>
 		<% end %>
 	<% end %>
 </footer>
